fix(console): fix info icon vertical alignment

--- a/packages/console/src/pages/Dashboard/components/Block.module.scss
+++ b/packages/console/src/pages/Dashboard/components/Block.module.scss
@@ -39,6 +39,10 @@
       width: 16px;
       height: 16px;
       color: var(--color-caption);
+
+      > svg {
+        display: block;
+      }
     }
   }
 
